changed the path of the pictures

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="navigation">
             <div class="logo">
               <a href="my.html"
-                ><img src="/img/logo.png" alt="" class="logo-img"
+                ><img src="./img/logo.png" alt="" class="logo-img"
               /></a>
             </div>
             <nav>
@@ -38,7 +38,7 @@
             </div>
 
             <div class="registration-block">
-              <a href=""><img src="/img/Vector.png" alt="" /></a>
+              <a href=""><img src="./img/Vector.png" alt="" /></a>
               <a class="nav-registr" href=""><p>Log in / Register</p></a>
             </div>
           </div>
@@ -47,7 +47,7 @@
         <section class="home-content">
           <div class="title-menu">
             <div class="play">
-              <img src="/img/play-video.png" alt="" class="play-icon" />
+              <img src="./img/play-video.png" alt="" class="play-icon" />
               <h1 class="title-main">
                 Enjoy studying <br />
                 with Createx <br />
@@ -60,7 +60,7 @@
             </div>
           </div>
           <div class="img">
-            <img src="/img/illustration.png" alt="" class="main-img" />
+            <img src="./img/illustration.png" alt="" class="main-img" />
           </div>
         </section>
         <section class="guarantee-blocks">
