make new section and fix home page

--- a/index.html
+++ b/index.html
@@ -98,7 +98,68 @@
         </section>
       </div>
     </section>
-    <section></section>
+    <section class="info">
+      <div class="fon">
+        <img class="dots" src="./img/dots.png" alt="" />
+        <img class="circles" src="./img/circles.png" alt="" />
+      </div>
+      <div class="container">
+        <div class="info-content">
+          <div class="info-img">
+            <img class="info-img" src="./img/image.png" alt="" />
+          </div>
+          <div class="info-block">
+            <h4 class="info-subtitle">Who we are</h4>
+            <h1 class="title">Why Createx?</h1>
+            <!-- p-info 1 -->
+            <div class="info-text">
+              <img class="info-vector" src="./img/Vector.png" alt="" />
+              <p class="info-p">
+                A fermentum in morbi pretium aliquam adipiscing donec tempus.
+              </p>
+            </div>
+            <!-- p-info 2 -->
+            <div class="info-text">
+              <img class="info-vector" src="./img/Vector.png" alt="" />
+              <p class="info-p">Vulputate placerat amet pulvinar lorem nisl.</p>
+            </div>
+
+            <!-- p-info 3 -->
+            <div class="info-text">
+              <img class="info-vector" src="./img/Vector.png" alt="" />
+              <p class="info-p">
+                Consequat feugiat habitant gravida quisque elit bibendum id
+                adipiscing sed.
+              </p>
+            </div>
+            <!-- p-info 4 -->
+            <div class="info-text">
+              <div>
+                <img class="info-vector" src="./img/Vector.png" alt="" />
+              </div>
+
+              <p class="info-p">
+                Etiam duis lobortis in fames ultrices commodo nibh.
+              </p>
+            </div>
+            <!-- p-info 5 -->
+            <div class="info-text">
+              <img class="info-vector" src="./img/Vector.png" alt="" />
+              <p class="info-p">Tincidunt sagittis neque sem ac eget.</p>
+            </div>
+            <!-- p-info 6 -->
+            <div class="info-text">
+              <img class="info-vector" src="./img/Vector.png" alt="" />
+              <p class="info-p">
+                Ultricies amet justo et eget quisque purus vulputate dapibus
+                tortor.
+              </p>
+            </div>
+            <button class="info-btn">More about us</button>
+          </div>
+        </div>
+      </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
